# grupo_express_it

./: .editorconfig  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
grupo_express_it/: hooks.py  modules.txt  patches.txt
grupo_express_it/config/: desktop.py  docs.py  overrides.py
grupo_express_it/grupo_express_invoice_tool/custom/: document_naming_rule.json  sales_invoice.json
grupo_express_it/grupo_express_invoice_tool/desk_page/selling/: selling.json
grupo_express_it/grupo_express_invoice_tool/doctype/: queries.py
grupo_express_it/grupo_express_invoice_tool/doctype/customer/: customer.js  customer.json  customer.py  customer_list.js  test_customer.py
grupo_express_it/grupo_express_invoice_tool/doctype/item/: item.js  item.json  item.py  item_list.js  test_item.py
grupo_express_it/grupo_express_invoice_tool/doctype/pricing_rule/: pricing_rule.json  pricing_rule.py  test_pricing_rule.py
grupo_express_it/grupo_express_invoice_tool/doctype/sales_invoice/: sales_invoice.js  sales_invoice.json  sales_invoice.py  sales_invoice_list.js  test_sales_invoice.py  utils-meta.http
grupo_express_it/grupo_express_invoice_tool/doctype/sales_invoice_item/: sales_invoice_item.json  sales_invoice_item.py
grupo_express_it/grupo_express_invoice_tool/print_format/sales_invoice/: sales_invoice.json
grupo_express_it/patches/v14_0/: sales_invoice_naming.py
grupo_express_it/public/js/: grupo_express.bundle.js
grupo_express_it/public/scss/: grupo_express.bundle.scss
grupo_express_it/translations/: es.csv
(+41 files in other folders)
