[project]
name = "grupo_express_it"
authors = [
    { name = "Agile Shift", email = "contacto@gruporeal.org" }
]
description = "Grupo Express Invoice Tool"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
